Fix pattern card positioning on mobile

--- a/src/components/pattern.scss
+++ b/src/components/pattern.scss
@@ -10,9 +10,15 @@
     justify-content: center;
     font-size: 22px;
     color: black;
-    margin: 0 auto;
 
     div {
         margin-top: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 1024px) {
+    .pattern {
+        margin: 0 auto;
     }
 }
